[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = [
    "py38",
    "py39",
    "py310",
    "py311"
]

[tool.isort]
profile = "black"
src_paths = [
    "twitter_sdk",
    "tests",
    "setup.py"
]
line_length = 79
wrap_length = 79
multi_line_output = 3
