[metadata]
name = twitter-sdk
version = 0.0.0
author_email = reddy.siddartha53@gmail.com
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/siddartham/twitter-sdk

[options]
python_requires = ~=3.8
include_package_data = True
packages =
	twitter_sdk

[options.entry_points]
console_scripts =
	twitter-sdk = twitter_sdk.__main__:main

[options.package_data]
* = py.typed
